--- a/style.css
+++ b/style.css
@@ -1,48 +1,158 @@
-#body {
-    margin: 0px;
-    padding: 0px;
+:root{
+    --azul-dnc: #0C70F2;
+    --preto-dnc: #303030;
+    --cinza-hover: #C9C9C9;
+
+    --fonte-padrão: "Inter";
 }
 
-#principal {
-    width: 100%;
-    height: 100px;
-    background-color: #303030;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #BABABA;
-}
+    body {
+        margin: 0px;
+        padding: 0px;
+        background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 19.91%, rgba(12, 112, 242, 0) 24.84%), #303030;
+        background-repeat: no-repeat;
+    }
 
-    #menu {
+    /* Menu de Navegação Principal */
+
+    #principal {
+        width: 100%;
+        height: 100px;
+        border: 1px solid #000000;
+        background-color: var(--preto-dnc);
         display: flex;
-        width: 45%;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
-        margin-left: 5%;
+        border-bottom: 1px solid #BABABA;
     }
 
-    #principal div a{
-        font-family: "Inter";
-        font-size: 25px;
-        font-weight: 600;
-        color: #FFFFFF;
-        text-decoration: none;
-    }
-
-        #principal div a:hover{
-            color: #CCCCCC;
+        #menu {
+            display: flex;
+            width: 45%;
+            justify-content: space-around;
+            align-items: center;
+            margin-left: 5%;
         }
 
-    #principal button {
-        margin-right: 5%;
-        background-color: #0C70F2;
+        #principal div a{
+            font-family: var(--fonte-padrão);
+            font-size: 25px;
+            font-weight: 600;
+            color: #FFFFFF;
+            text-decoration: none;
+        }
+
+            #principal div a:hover{
+                color: var(--cinza-hover);
+            }
+
+        #principal button {
+            margin-right: 5%;
+            background-color: var(--azul-dnc);
+            border: 0px;
+            height: 40px;
+            width: 80px;
+            font-family: var(--fonte-padrão);
+            font-size: 20px;
+            font-weight: 600;
+            color: #FFFFFF;
+            box-shadow: 3px 2px 4px 0px #0C70F240;
+            cursor: pointer;
+        }
+
+    /* Seção */
+
+    section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+
+        header {
+            color: #FFFFFF;
+            font-family: var(--fonte-padrão);
+        }
+
+        header h1 {
+            font-size: 80px;
+            font-weight: 800;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        header h2 {
+            text-align: center;
+            font-size: 40px;
+            font-weight: 700;
+            margin-bottom: 100px;
+        }
+
+        header .invert {
+            background-color: #000000;
+            font-weight: bold;
+            padding: 5px;
+        }
+
+    /* Formulário */
+
+    form{
+        color: #FFFFFF;
+        font-family: var(--fonte-padrão);
+        font-size: 30px;
+        font-weight: 600;
+        width: 600px;
+    }
+
+    .form-group {
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    form input {
+        border-radius: 10px;
         border: 0px;
-        height: 40px;
-        width: 80px;
-        font-family: "Inter";
+        height: 30px;
         font-size: 20px;
+        padding: 10px;
+        background-color: rgba(255, 255, 255, 0.9);
+    }
+
+    form label {
+        margin: 10px 0px 10px 0px;
+    }
+
+    form input::placeholder{
+        color: rgba(57, 57, 57, 0.5);
+    }
+
+    .checkbox-itens{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    .checkbox-itens label{
+        font-size: 25px;
+    }
+
+    input[type="checkbox"]{
+        transform: scale(1.7);
+    }
+
+    input[type="submit"]{
+        background-color: rgba(12, 112, 242, 0.9);
+        width: 100%;
+        height: 56px;
+        font-size: 32px;
         font-weight: 600;
         color: #FFFFFF;
-        box-shadow: 3px 2px 4px 0px #0C70F240;
+        margin-top: 100px;
+        box-shadow: 0px 6px 4px 0px #0C70F240;
         cursor: pointer;
     }
