--- a/style.css
+++ b/style.css
@@ -156,3 +156,149 @@
         box-shadow: 0px 6px 4px 0px #0C70F240;
         cursor: pointer;
     }
+
+    /* Footer */
+
+    footer{
+        width: 100%;
+        background-color: var(--azul-dnc);
+    }
+
+    footer .linha1 {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    footer ul {
+        list-style: none;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    footer nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 330px;
+    }
+
+    footer h5 {
+        text-align: center;
+        color: #FFFFFF;
+        font-weight: 800;
+        font-family: var(--fonte-padrão);
+        font-size: 18px;
+        background-color: var(--preto-dnc);
+        border-radius: 10px;
+        padding: 10px 10px 10px 10px;
+        margin-bottom: 15px;
+    }
+
+    footer ul li {
+        text-align: center;
+        color: #FFFFFF;
+        font-weight: 600;
+        font-family: var(--fonte-padrão);
+        font-size: 18px;
+        margin: 20px 0px 20px 0px;
+    }
+
+    footer ul li a {
+        color: #FFFFFF;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    footer ul li a:hover{
+        color: var(--cinza-hover);
+    }
+
+    footer .endereço {
+        font-weight: 600;
+        font-family: var(--fonte-padrão);
+        font-size: 18px;
+        color: #FFFFFF;
+        width: 25%;
+        text-align: center;
+    }
+
+    footer .linha2 {
+        display: flex;
+        justify-content: center;
+        padding: 10px 10px 10px 10px;
+        height: 35px;
+    }
+
+    footer .linha2 a {
+        font-family: var(--fonte-padrão);
+        font-size: 18px;
+        font-weight: 600;
+        color: #FFFFFF;
+        text-decoration: none;
+        cursor: pointer;
+        padding: 5px;
+    }
+
+    footer .linha2 a:first-child {
+        border-right: 2px solid #FFFFFF;
+    }
+
+    footer .linha2 a:hover {
+        color: var(--cinza-hover);
+    }
+
+@media only screen and (max-width: 600px) {
+
+    /* Menu */
+   
+    #principal {
+        flex-direction: column;
+    }
+
+    #menu {
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+        background-color: var(--preto-dnc);
+    }
+
+    #menu a {
+        display: flex;
+        align-items: center;
+        height: 35px;
+    }
+
+    #principal button {
+        width: 100%;
+        margin: 0px;
+    }
+
+    /* Section */
+
+    section h1 {
+        font-size: 38px;
+    }
+
+    section h2 {
+        font-size: 30px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    /* Formulário */
+
+    form {
+        width: 95%;
+        font-size: 20px;
+    }
+
+    .checkbox-itens label {
+        font-size: 17px;
+    }
+    
+    /* Footer */
+
+    
+
+}
