--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@
 
 @media only screen and (max-width: 600px) {
 
-    /* Menu */
+/* Menu */
    
     #principal {
         flex-direction: column;
@@ -274,7 +274,7 @@
         margin: 0px;
     }
 
-    /* Section */
+/* Section */
 
     section h1 {
         font-size: 38px;
@@ -286,7 +286,7 @@
         padding-left: 15px;
     }
 
-    /* Formulário */
+/* Formulário */
 
     form {
         width: 95%;
@@ -297,8 +297,16 @@
         font-size: 17px;
     }
     
-    /* Footer */
+/* Footer */
 
-    
+    footer .linha1 {
+        flex-direction: column;
+        font-size: 12px;
+    }
+
+    footer .endereço {
+        width: 95%;
+        font-size: 12px;
+    }
 
 }
